# MariaDB-Context-Manager

./: .dockerignore  .gitignore  Dockerfile  README.md  contextManager.py  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  start-int-tests.sh
.github/workflows/: build-for-release.yml  publish-to-test-pypi.yml  python-publish-to-pypi.yml  python-publish.yml
mariadb_data/backup/: 001_setup.sql  run_scripts.sh
src/contextManager/: __init__.py  contextManager.py  conversions.py
src/testing/: config.toml  docker_compose.yml  testing.py
src/tests/: conf_test.py  tests.py
testing/: tests.py
testing/Integration/python-scripts/: test-actions.py
